src/index.css
:root {
  --background-color-1: #222;
  --background-color-2: #555;
  --background-color-3: #666;
  --color-1: #bfff00;
  --color-2: #555;

  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #222;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  height: 100dvh;
}

